adding a listener to the metrics drop-down, adding equation images.
Former-commit-id: d299a9de758dcdcffec79531d944a999d9acc8cf

--- a/style.css
+++ b/style.css
@@ -90,6 +90,11 @@ svg#legend {
 	padding: 15px;
 }
 
+#metriceq {
+	display: block;
+	margin: 10px auto;
+}
+
 #canvas-labels {
 	position: absolute;
 	z-index: -10;
