fixing overloaded 'modal' css definition
Former-commit-id: e227591b754262ab646fce5df2d50d8255b6e846

--- a/style.css
+++ b/style.css
@@ -91,11 +91,11 @@ svg#detail {
 	left: 875px;
 }
 
-#detail .modal {
+#detail .pos-modal {
 	fill: #0f0;
 }
 
-#detail .var {
+#detail .pos-var {
 	fill: #f00;
 }
 
