fixed processing binary files into json.. need to update to put it into a d3-like data format for the filtered data.
.htaccess: turn php error logging on


Former-commit-id: 4be8aab88f76c9e91a427a3fea21c1b6030d4f2c

--- a/style.css
+++ b/style.css
@@ -214,3 +214,9 @@ svg .axis text {
 	color: #F07C68;
 }
 
+/** D3viewer styles **/
+#d3canvas {
+	width: 800px;
+	height: 800px;
+	border: 1px solid #000;
+}
