adding more d3 stuffs.
Former-commit-id: 873ad25ef17bfa2c79b6abd9667fd94c0dd64082

--- a/style.css
+++ b/style.css
@@ -216,7 +216,11 @@ svg .axis text {
 
 /** D3viewer styles **/
 #d3canvas {
-	width: 800px;
+	width: 1000px;
 	height: 800px;
 	border: 1px solid #000;
+}
+
+#d3canvas text.label {
+	text-anchor: middle;
 }
