spatially clustering items that are close to one another in genomic space, fixed  labelling, connections to the genome axis
.. starting genome ordering


Former-commit-id: 4e00942047720803569730de31799756800e69b7

--- a/style.css
+++ b/style.css
@@ -276,8 +276,12 @@ svg .axis text {
 	stroke-width: 2;
 }
 
-#d3canvas .ipos:hover line {
-	stroke: #f00;
+#d3canvas .wedge {
+	fill: #333;
+}
+
+#d3canvas .wedge .selected {
+	fill: #f00;
 }
 
 /* indicate that you can click on stuff */
