adding progress bars and fixing minor typographical issues
Former-commit-id: d8c1297603d8b327778ac7cc13151bb95a140cf1

--- a/style.css
+++ b/style.css
@@ -39,6 +39,17 @@ canvas {
 	width: 400px;
 }
 
+.progs {
+	text-align: right;
+	margin-top: 20px;
+	margin-right: 40px;
+}
+
+.progValue {
+	display: inline-block;
+	width: 40px;
+}
+
 #img-container img {
 	display: none;
 	margin: 20px auto;
