fixing loading bugs, adding tooltips for genes and standardizing gene colors
Former-commit-id: 8047af55899495e0f6f5b4d58c7895e1e77839c7

--- a/style.css
+++ b/style.css
@@ -370,6 +370,11 @@ svg .axis text {
   pointer-events: none;
 }
 
+.d3-tip .geneRange {
+	font-weight: normal;
+	color: #ccc;
+}
+
 /* Creates a small triangle extender for the tooltip */
 .d3-tip:after {
   box-sizing: border-box;
